feat(logging): add SLF4J logging to DockerSecretsConfig and update error handling refactor(tracing): simplify traceCorrelationFilter and ensure non-null currentSpan in TracingConfiguration refactor(notification): use toList() for notifications response collection in NotificationController refactor(user): standardize terminology in UserName class documentation